--- a/AlgoMed.ipynb
+++ b/AlgoMed.ipynb
@@ -498,18 +498,46 @@
     }
    ],
    "source": [
-    "print('#########')\n",
-    "print('Among the nearest neightboors...')\n",
-    "print('\\n')\n",
-    "print(\"\\033[4mAspirine.\\033[0m\")\n",
-    "print(\"Average efficiency: 73%\")\n",
-    "print(\"Side effects: fever (18%), diarrhea (0%)\")\n",
-    "print('\\n')\n",
-    "print(\"\\033[4mParacetamol.\\033[0m\")\n",
-    "print(\"Average efficiency: 84%\")\n",
-    "print(\"Side effects: fever (10%), diarrhea (0%)\")\n",
-    "print('\\n')\n",
-    "print(\"Recommandation for patient: \\033[4mparacetamol\\033[0m\")"
+    "treatment_id = 1\n",
+    "patient = df_patients.iloc[nss, :]\n",
+    "treatment = df_with_results.iloc[treatment_id,:]\n",
+    "associated_drug = df_drugs.iloc[treatment.drug, :]\n",
+    "deseases_map = {0: 'vagal_discomfort', 1: 'diabetes', 2: 'heart_desease'}\n",
+    "\n",
+    "def look_for_recommandations():\n",
+    "    average_diarrhee = {}\n",
+    "    average_fever = {}\n",
+    "    average_efficiency = {}\n",
+    "    cpt = {}\n",
+    "    disease = treatment_local.disease\n",
+    "    for i in range(df_with_results.shape[0]):\n",
+    "        treatment_local = df_with_results.iloc[i,:]\n",
+    "        if(disease == treatment.disease):\n",
+    "            cpt[disease] += 1\n",
+    "            average_diarrhee[disease] += treatment.diarrhea_scoring\n",
+    "            average_fever[disease] += treatment.fever_scoring\n",
+    "            average_efficiency[disease] += treatment.scoring\n",
+    "    if (cpt == 0):\n",
+    "        return(0,0,0)\n",
+    "    return(average_diarrhee/cpt, average_fever/cpt, average_efficiency/cpt)\n",
+    "\n",
+    "def print_recommandationprint():\n",
+    "    print('#########')\n",
+    "    print('Among the nearest neightbors...')\n",
+    "    print('\\n')\n",
+    "    best_drug = ''\n",
+    "    best_efficiency = 0\n",
+    "    average_diarrhee, average_fever, average_efficiency = look_for_recommandations()\n",
+    "    for key in average_diarrhee.keys():\n",
+    "        if average_efficiency[key] > best_efficiency:\n",
+    "            best_drug = key\n",
+    "            best_efficiency = average_efficiency[key]\n",
+    "        print('\\033[4m'+key +'\\033[0m')\n",
+    "        print(\"Average efficiency: \" + average_efficiency[key])\n",
+    "        print(\"Side effects: fever (\" + str(average_fever[key]*100) + \"%), diarrhea (\"+ str(average_fever[key]*100) + \"%)\")\n",
+    "        print('\\n')\n",
+    "    print('\\n')\n",
+    "    print(\"Recommandation for patient: \\033[4mparacetamol\\033[0m\")"
    ]
   }
  ],
